--- a/task03_0606/Views/_Member_Home_LayoutPage1.cshtml
+++ b/task03_0606/Views/_Member_Home_LayoutPage1.cshtml
@@ -64,7 +64,7 @@
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
                     <a class="nav-link" href="/Member/EditPersonalData">
                         <i class="fa fa-fw fa-pencil"></i>
-                        <span class="nav-link-text">修改會員資料</span>
+                        <span class="nav-link-text">修改個人資料</span>
                     </a>
                 </li>
             </ul>
