--- a/task03_0606/Views/Member/CustemerOrder.cshtml
+++ b/task03_0606/Views/Member/CustemerOrder.cshtml
@@ -1,20 +1,10 @@
 ﻿
 @{
-    string LayoutUrl = "~/Views/_Normal_Member_Home_LayoutPage1.cshtml";
-    if ((string)Session["identity"] == "storeUser") {
-        LayoutUrl = "~/Views/_Member_Home_LayoutPage1.cshtml";
-    }
-    if ((string)Session["identity"] == "superUser") {
-        LayoutUrl = "~/Views/_Member_SuperUser_LayoutPage1.cshtml";
-    }
-    if ((string)Session["identity"] == "store") {
-        LayoutUrl = "~/Views/_Store_Home_LayoutPage1.cshtml";
-    }
-    ViewBag.Title = "EditPersonalData";
-    Layout = LayoutUrl;
+    ViewBag.Title = "CustemerOrder";
+    Layout = "~/Views/_Normal_Member_Home_LayoutPage1.cshtml";
 }
 
-<h2>OrderTable</h2>
+<h2>CustemerOrder</h2>
 <div class="content-wrapper">
     <div class="container-fluid">
         <!-- Breadcrumbs-->
@@ -34,8 +24,10 @@
                     <table class="table table-bordered" id="dataTable" width="100" cellspacing="0">
                         <thead>
                             <tr>
-                                <th>Name</th>
+                                <th>商店名稱</th>
                                 <th>桌號</th>
+                                <th>商品</th>
+                                <th>總金額</th>
                                 <th>訂單日期</th>
                                 <th>訂單狀態</th>
                                 <th>詳細資料</th>
@@ -43,8 +35,10 @@
                         </thead>
                         <tfoot>
                             <tr>
-                                <th>Name</th>
+                                <th>商店名稱</th>
                                 <th>桌號</th>
+                                <th>商品</th>
+                                <th>總金額</th>
                                 <th>訂單日期</th>
                                 <th>訂單狀態</th>
                                 <th>詳細資料</th>
@@ -52,26 +46,15 @@
                         </tfoot>
                         <tbody>
                             <tr>
-                                <td>王五</td>
+                                <td>東風</td>
                                 <td>1</td>
+                                <td>排骨飯x2</td>
+                                <td>200</td>
                                 <td>2018-06-19</td>
                                 <td>顧客訂購</td>
-                                <td><a class="btn btn-primary" href="/Member/OrderDetial">詳細資料</a></td>
+                                <td><a class="btn btn-primary" href="/Member/CustemerOrderDetial">詳細資料</a></td>
                             </tr>
-                            <tr>
-                                <td>王五</td>
-                                <td>12</td>
-                                <td>2018-06-19</td>
-                                <td>顧客訂購</td>
-                                <td><button class="btn btn-primary">詳細資料</button></td>
-                            </tr>
-                            <tr>
-                                <td>王五</td>
-                                <td>12</td>
-                                <td>2018-06-19</td>
-                                <td>顧客訂購</td>
-                                <td><button class="btn btn-primary">詳細資料</button></td>
-                            </tr>
+                            
 
 
                         </tbody>
@@ -94,24 +77,7 @@
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fa fa-angle-up"></i>
     </a>
-    <!-- Logout Modal-->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">準備登出?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">當你準備好離開時，按下"登出"按鍵登出。</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">關閉</button>
-                    <a class="btn btn-primary" href="~/Member/Logout">登出</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
