--- a/task03_0606/Views/Member/ForgotPassword.cshtml
+++ b/task03_0606/Views/Member/ForgotPassword.cshtml
@@ -11,11 +11,11 @@
         <div class="card-body">
             <div class="text-center mt-4 mb-5">
                 <h4>忘記密碼了?</h4>
-                <p>請輸入註冊時的電子信箱，我們將傳送一封電子郵件用以重製密碼。</p>
+                <p>請輸入註冊時的手機號碼，我們將傳送一封簡訊用以重製密碼。</p>
             </div>
             <form method="post" action="">
                 <div class="form-group">
-                    <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="請輸入註冊信箱...">
+                    <input class="form-control" id="cellPhone" name="cellPhone" type="tel" maxlength="10" pattern="([0]{1})([9]{1})(\d{8})" required aria-describedby="telHelp" placeholder="請輸入手機號碼...">
                 </div>
                 @*<a class="btn btn-primary btn-block" href="login.html">重設密碼</a>*@
                 <button type="submit" class="btn btn-primary btn-block">重設密碼</button>
