--- a/task03_0606/Views/Products/Edit.cshtml
+++ b/task03_0606/Views/Products/Edit.cshtml
@@ -1,53 +1,82 @@
 ﻿@model task03_0606.Models.Class1
 @{
     ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
-<h2>Edit</h2>
+
+<h2>修改產品</h2>
 
 
-<div class="container">
+@using (Html.BeginForm())
+{ @Html.AntiForgeryToken()
 
-@Html.AntiForgeryToken()
-    <form method="post" action="" data-ajax="ture">
+    <div class="form-horizontal">
+
+
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.productId)
+
         <div class="form-group">
 
-            <div class="col-md-6">
-                <label for="exampleInputName">產品編號</label>
-                <input class="form-control" id="productsId" name="productsId" type="text" value="@Model.productId">
-            </div>
-            <div class="col-md-6">
-                <label for="exampleInputLastName">產品名稱</label>
-                <input class="form-control" id="title" name="title" type="text" value="@Model.title">
-            </div>
-            <div class="col-md-6">
-                <label for="exampleInputEmail1">產品售價</label>
-                <input class="form-control" id="price" name="price" type="text" value="$@Model.price">
-            </div>
-            <div class="col-md-6">
-                <label for="exampleInputEmail1">產品介紹</label>
-                <input class="form-control" id="introduce" name="introduce" type="text" value="@Model.introduce">
+            @Html.LabelFor(model => model.title, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
+                @*<label for="exampleInputName">產品編號</label>
+                    <input class="form-control" id="productsId" name="productsId" type="text" aria-describedby="productsHelp" value="@Model.productId">*@
             </div>
             <div class="form-group">
-                <div class="col-md-6">
-                    <input type="file" accept="image/*" onchange="showMyImage(this)" />
-                    <br />
-                    <img id="thumbnil" style="width:20%; margin-top:10px;" src="" alt="image" />
-                    
+                @Html.LabelFor(model => model.picture, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.picture, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.picture, "", new { @class = "text-danger" })
+                    @*<label for="exampleInputLastName">產品名稱</label>
+                        <input class="form-control" id="title" name="title" type="text" value="@Model.title">*@
                 </div>
+                <div class="form-group">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.price, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
+                            @*<label for="exampleInputEmail1">產品售價</label>
+                                <input class="form-control" id="price" name="price" type="text" value="@Model.price">*@
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.introduce, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.introduce, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.introduce, "", new { @class = "text-danger" })
+                                @*<label for="exampleInputEmail1">產品介紹</label>
+                                    <input class="form-control" id="introduce" name="introduce" type="text" value="@Model.introduce">*@
+                            </div>
 
-                <div class="ui-grid-a">
-                    <div class="ui-block-a"><input type="submit" name="btnOKCancel" value="OK" /></div>
-                    <div class="ui-block-b"><input type="submit" name="btnOKCancel" value="Cancel" /></div>
+                            @*<div class="col-md-6">
+                                    <label for="exampleInputEmail1">產品圖片</label>
+                                    <input class="form-control" id="picture" name="picture" type="text" value="@Model.picture">
+                                </div>*@
+
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <input type="submit" value="Save" class="btn btn-default" />
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div>
+                            @Html.ActionLink("Back to List", "ManagerIndex")
+                        </div>
+                    </div>
                 </div>
             </div>
-    </form>
-    
+        </div>
     </div>
 
-    @*<form action="@Url.Action("Upload")" method="post" enctype="multipart/form-data">
-        <label for="file">Filename:</label>
-        <input type="file" name="file" id="file" />
-        <input type="submit" />
-    </form>*@
     <hr />
+}
