--- a/task03_0606/Views/Home/RestaurentMemberPage.cshtml
+++ b/task03_0606/Views/Home/RestaurentMemberPage.cshtml
@@ -58,19 +58,27 @@
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <label class="card-text" id="ProductName">可樂(中)</label>
+                                <label class="card-text" id="MemberID">1</label>
+                                <label class="card-text" id="UnitPrice">30</label>
                             </div>
                             <div class="card-footer">
-                                <small class="text-muted">Last updated 3 mins ago</small>
+                                <a href="#">加入購物車</a>
                             </div>
                         </div>
+
                         <div class="card  col-sm-3">
                             <img class="card-img-top" src="~/picture/1610141734150000001.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                <label class="card-text" id="ProductName">薯條</label>
+                                <label class="card-text" id="MemberID">1</label>
+                                <label class="card-text" id="UnitPrice">40</label>
+
                             </div>
                             <div class="card-footer">
-                                <small class="text-muted">Last updated 3 mins ago</small>
+                                <a href="#">加入購物車</a>
                             </div>
                         </div>
                         <div class="card  col-sm-3">
